packages/taquito-michel-codec/test/contracts_013/ill_typed/stack_bottom_unpopable_in_lambda.tz
parameter unit;
storage unit;
code {
       DROP ;
       LAMBDA int unit { DROP ; DUP };
       DROP ;
       PUSH unit Unit ;
       NIL operation ;
       PAIR
     }
